--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_URL}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    url: ${RUNHI_DB_URL}
+    username: ${RUNHI_DB_USER}
+    password: ${RUNHI_DB_PASSWORD}
 
   jpa:
     database: mysql
