--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,9 @@ decorator:
   datasource:
     p6spy:
       enable-logging: true
+
+#JWT
+jwt:
+  secret-key: ${JWT_SECRET_KEY}
+  access-token-expiration-time: ${ACCESS_TOKEN_EXPIRATION_TIME}
+  refresh-token-expiration-time: ${REFRESH_TOKEN_EXPIRATION_TIME}
